<resources>
    <string name="app_name">Carilo</string>
    <string name="tv_title">Título</string>
    <string name="et_title">Título...</string>
    <string name="tv_description">Descrição</string>
    <string name="et_description">Descrição...</string>
    <string name="cb_pinned">Cartão Fixado</string>
    <string name="cb_marker">Marcador</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="pt_br_language">Português</string>
    <string name="en_us_language">Inglês</string>
    <string name="deleteMSG">Confirmar Exclusão</string>
    <string name="positive">Sim</string>
    <string name="negative">Não</string>
    <string name="deleteTitle">Deletar</string>
    <string name="update">Atualizar</string>
    <string name="btn_title_language">Escolha a linguagem</string>
</resources>