<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/cadastro">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:padding="20dp"
        android:background="@drawable/card_view_bg"
        style="@style/cadastroCard">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/tv_title"
            style="@style/cadastroTvLabels"/>

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:layout_below="@id/tvTitle"
            android:textCursorDrawable="@drawable/cursor"
            style="@style/cadastroTitleED"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_below="@id/etTitle"
            android:text="@string/tv_description"
            style="@style/cadastroTvLabels"/>

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:ems="10"
            android:gravity="top"
            android:layout_below="@id/tvDescription"
            android:textCursorDrawable="@drawable/cursor"
            style="@style/cadastroDescriptionED"/>

        <CheckBox
            android:id="@+id/cbPinnedCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="30dp"
            android:layout_below="@id/etDescription"
            android:text="@string/cb_pinned"
            style="@style/cadastroCheckBox"/>

        <EditText
            android:id="@+id/etCategory"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="30dp"
            android:layout_below="@id/etDescription"
            android:layout_toEndOf="@id/cbPinnedCard"
            android:hint="Categoria..."/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_below="@id/cbPinnedCard"
            android:text="@string/btn_cancel"
            style="@style/cadsatroButtonNegative"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/btn_save"
            android:layout_below="@id/cbPinnedCard"
            android:layout_toEndOf="@id/btnCancel"
            style="@style/cadsatroButtonPositive"/>
    </RelativeLayout>

</LinearLayout>